--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -9,6 +9,13 @@
       <svg width="960px" height="960px" style="max-width: 100%; max-height: 100%"></svg>
     </div>
     <div class="ui-grid-col-6">
+      <div class="form-group">
+        <label for="group">Group By:</label>
+        <select class="form-control" id="group" [(ngModel)]="groupBy" (change)="initializeForceDirectedGraph()">
+          <option value="climate">Climate</option>
+          <option value="alignment">Alignment</option>
+        </select>
+      </div>
       <small id="legend"></small>
       <p-autoComplete placeholder="Planet 1" [(ngModel)]="p1" [suggestions]="planets1" (completeMethod)="search('planets1', $event)"></p-autoComplete>
       <p-autoComplete placeholder="Planet 2" [(ngModel)]="p2" [suggestions]="planets2" (completeMethod)="search('planets2', $event)"></p-autoComplete>
