Initial changes to remove primeng and migrate to scss.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,7 +30,10 @@
         <a class="nav-link" routerLink="/map">Galaxy Map</a>
       </li>
     </ul>
-    <a href="https://drive.google.com/drive/folders/0B_Ii2UyVgIWuVlhUQ1hJTWdCWEk?usp=sharing" target="_blank"><button pButton type="button" class="ui-button-primary" label="Files" iconPos="right" icon="fa-external-link"></button></a>
+    <a class="btn btn-primary" href="https://drive.google.com/drive/folders/0B_Ii2UyVgIWuVlhUQ1hJTWdCWEk?usp=sharing" target="_blank">
+      Files&nbsp;
+      <i class="fal fa-fw fa-external-link"></i>
+    </a>
   </div>
 </nav>
 
