--- a/src/app/force/force.component.html
+++ b/src/app/force/force.component.html
@@ -1,81 +1,78 @@
 <h1 class="title">Force</h1>
 <hr/>
 
-<p-tabMenu [model]="items"></p-tabMenu>
-<p-dataTable [value]="abilities" expandableRows="true" #dt (onRowClick)="dt.toggleRow($event.data)" *ngIf="activeItem.label == 'Ability Table'" [rows]="15" [paginator]="true" [pageLinks]="5" [responsive]="true" [stacked]="stacked">
-  <p-header>List of Abilities</p-header>
-  <p-column field="name" header="Name" [sortable]="true" [filter]="true" filterPlaceholder="Search"></p-column>
-  <p-column field="discipline" header="Discipline" [sortable]="true" [filter]="true" filterPlaceholder="Search"></p-column>
-  <p-column field="order" header="Force Order" [sortable]="true" [filter]="true" filterPlaceholder="Search"></p-column>
-  <p-column field="cost" header="Force Points"></p-column>
-  <p-column field="casting_time" header="Casting Time" [filter]="true" filterMatchMode="equals" [style]="{'overflow':'visible'}">
-    <ng-template pTemplate="filter" let-col>
-      <p-dropdown [options]="castingTimeOptions" [style]="{'width':'100%'}" (onChange)="dt.filter($event.value,col.field,col.filterMatchMode)" styleClass="ui-column-filter"></p-dropdown>
-    </ng-template>
-    <ng-template let-col let-item="rowData" pTemplate="body">
-      <span>{{ item[col.field] | capitalize }}</span>
-    </ng-template>
-  </p-column>
-  <p-column field="duration" header="Duration">
-    <ng-template let-col let-item="rowData" pTemplate="body">
-      <span>{{ item[col.field] | capitalize }}</span>
-    </ng-template>
-  </p-column>
-  <p-column field="range" header="Range/Area" [filter]="true" filterMatchMode="equals" [style]="{'overflow':'visible'}">
-    <ng-template pTemplate="filter" let-col>
-      <p-dropdown [options]="rangeOptions" [style]="{'width':'100%'}" (onChange)="dt.filter($event.value,col.field,col.filterMatchMode)" styleClass="ui-column-filter"></p-dropdown>
-    </ng-template>
-    <ng-template let-col let-item="rowData" pTemplate="body">
-      <span>{{ item[col.field] | capitalize }}</span>
-    </ng-template>
-  </p-column>
-  <ng-template let-ability pTemplate="rowexpansion">
-    <div class="ui-g ui-grid ui-grid-responsive ui-fluid" style="font-size:16px;padding:20px">
-      <div class="ui-g-2"></div>
-      <div class="ui-g-8">
-        <div class="ui-grid-row">
-          <div class="ui-grid-col-4">
-            <div class="ui-grid-row">
-              <div class="label">Discipline: {{ ability.discipline }}</div>
-            </div>
-            <div class="ui-grid-row">
-              <div class="label">Force Order: {{ ability.order }}</div>
-            </div>
-            <div class="ui-grid-row">
-              <div class="label">Cost: {{ ability.cost }} force points</div>
-            </div>
-          </div>
-          <div class="ui-grid-col-4">
-            <div class="ui-grid-row">
-              <div class="label">Target: {{ ability.target }}</div>
-            </div>
-            <div class="ui-grid-row">
-              <div class="label">Range: {{ ability.range }}</div>
-            </div>
-            <div class="ui-grid-row">
-              <div class="label">Damage: {{ ability.damage }}</div>
-            </div>
-          </div>
-          <div class="ui-grid-col-4">
-            <div class="ui-grid-row">
-              <div class="label">Casting Time: {{ ability.casting_time }}</div>
-            </div>
-            <div class="ui-grid-row">
-              <div class="label">Concentration: {{ ability.conc ? 'Yes':'No' }}</div>
-            </div>
-            <div class="ui-grid-row">
-              <div class="label">Duration: {{ ability.duration }}</div>
-            </div>
-          </div>
-        </div>
-        <hr/>
-        <div class="ui-grid-row" [innerHtml]="ability.description"></div>
-      </div>
-    </div>
-  </ng-template>
-</p-dataTable>
+<div *ngIf="view === 'abilities'">
+  <app-filter-input [(filter)]="filter" [filterOptions]="filterOptions"></app-filter-input>
 
-<div *ngIf="activeItem.label == 'Select Disciplines'" style="padding: 5px 5px 5px 5px;">
+  <div class="table-responsive col-12">
+    <table class="table">
+      <thead>
+        <tr>
+          <th>Name</th>
+          <th>Discipline</th>
+          <th>Force Order</th>
+          <th>Force Points</th>
+          <th>Casting Time</th>
+          <th>Duration</th>
+          <th>Range/Area</th>
+        </tr>
+      </thead>
+      <tbody *ngFor="let ability of pagedAbilities()" >
+        <tr (click)="ability.visible = !ability.visible">
+          <td>{{ ability.name }}</td>
+          <td>{{ ability.discipline }}</td>
+          <td>{{ ability.order }}</td>
+          <td>{{ ability.cost }}</td>
+          <td>{{ ability.casting_time | capitalize }}</td>
+          <td>{{ ability.duration | capitalize }}</td>
+          <td>{{ ability.range | capitalize }}</td>
+        </tr>
+        <tr *ngIf="ability.visible">
+          <td colspan="7">
+            <div class="col-6 offset-0 col-md-8 offset-md-2">
+                <div class="row">
+                  <h3>{{ ability.name }}</h3>
+                </div>
+                <div class="row">
+                  <div class="col-4">
+                    <div class="label">Discipline: {{ ability.discipline }}</div>
+                  </div>
+                  <div class="col-4">
+                    <div class="label">Force Order: {{ ability.order }}</div>
+                  </div>
+                  <div class="col-4">
+                    <div class="label">Cost: {{ ability.cost }} force points</div>
+                  </div>
+                  <div class="col-4">
+                    <div class="label">Target: {{ ability.target }}</div>
+                  </div>
+                  <div class="col-4">
+                    <div class="label">Range: {{ ability.range }}</div>
+                  </div>
+                  <div class="col-4">
+                    <div class="label">Damage: {{ ability.damage }}</div>
+                  </div>
+                  <div class="col-4">
+                    <div class="label">Casting Time: {{ ability.casting_time }}</div>
+                  </div>
+                  <div class="col-4">
+                    <div class="label">Concentration: {{ ability.conc ? 'Yes':'No' }}</div>
+                  </div>
+                  <div class="col-4">
+                    <div class="label">Duration: {{ ability.duration }}</div>
+                  </div>
+                </div>
+                <hr/>
+                <div class="row" [innerHtml]="ability.description"></div>
+              </div>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
+
+<div *ngIf="view === 'disciplines'" style="padding: 5px 5px 5px 5px;">
   <p-multiSelect [options]="selectDisciplines" [(ngModel)]="selectedDisciplines" (onChange)="saveSelectedDisciplines()"></p-multiSelect>
   <div class="ui-grid ui-grid-responsive" *ngFor="let discipline of disciplines">
     <div class="panel-padding" *ngIf="selectedDisciplines.includes(discipline.name)">
