--- a/src/app/gadgets/gadgets.component.html
+++ b/src/app/gadgets/gadgets.component.html
@@ -1,49 +1,65 @@
 <h1 class="title">Gadgets</h1>
-<p-dataTable [value]="gadgets" expandableRows="true" #dt (onRowClick)="dt.toggleRow($event.data)" sortField="name" sortOrder="1"
-[rows]="15" [paginator]="true" [pageLinks]="5" [responsive]="true" [stacked]="stacked">
-  <p-header>List of Gadgets</p-header>
-  <p-column field="name" header="Name" [sortable]="true" [filter]="true" filterPlaceholder="Search"></p-column>
-  <p-column field="type" header="Type" [sortable]="true" [filter]="true" filterPlaceholder="Search">
-    <ng-template let-col let-gadget="rowData" pTemplate="body">
-      <span>{{ gadget[col.field] | capitalize }}</span>
-    </ng-template>
-  </p-column>
-  <p-column field="activation" header="Activation Type" [sortable]="true" [filter]="true" filterPlaceholder="Search">
-    <ng-template let-col let-gadget="rowData" pTemplate="body">
-      <span>{{ gadget[col.field] | capitalize | commaSplit }}</span>
-    </ng-template>
-  </p-column>
-  <p-column field="level" header="Required Level" [sortable]="true" [filter]="true"  filterMatchMode="equals" [style]="{'overflow':'visible'}">
-    <ng-template pTemplate="filter" let-col>
-      <p-dropdown [options]="levelOptions" [style]="{'width':'100%'}" (onChange)="dt.filter($event.value,col.field,col.filterMatchMode)" styleClass="ui-column-filter"></p-dropdown>
-    </ng-template>
-    <ng-template let-col let-gadget="rowData" pTemplate="body">
-      <span>{{ gadget[col.field] | capitalize }}</span>
-    </ng-template>
-  </p-column>
-  <p-column field="restrictions" header="Restrictions" [sortable]="true" [filter]="true" filterPlaceholder="Search">
-    <ng-template let-col let-gadget="rowData" pTemplate="body">
-      <span>{{ gadget[col.field] | capitalize | commaSplit }}</span>
-    </ng-template>
-  </p-column>
-  <p-column field="cost" header="Standard Cost" [sortable]="true">
-    <ng-template let-col let-gadget="rowData" pTemplate="body">
-      <span>{{ gadget[col.field] }}cr</span>
-    </ng-template>
-  </p-column>
-  <ng-template let-gadget pTemplate="rowexpansion">
-    <div class="ui-g ui-grid ui-grid-responsive ui-fluid" style="font-size:16px;padding:20px">
-      <div class="ui-g-2"></div>
-      <div class="ui-g-8">
-        <h3>{{ gadget.name }}</h3>
-        <div class="ui-grid-row">
-          <em>
-            {{ _.capitalize(gadget.type) + (!!gadget.subtype ? ' (' + gadget.subtype + ')' : '')}}; Cost: {{ gadget.cost }}cr
-          </em>
-        </div>
-        <hr/>
-        <div class="ui-grid-row" [innerHtml]="gadget.desc | markdown"></div>
-      </div>
-    </div>
-  </ng-template>
-</p-dataTable>
+
+<app-filter-input [(filter)]="filter" [filterOptions]="filterOptions"></app-filter-input>
+
+<div class="table-responsive col-12">
+  <table class="table">
+    <thead>
+      <tr>
+        <th>Name</th>
+        <th>Type</th>
+        <th>Activation</th>
+        <th>Level</th>
+        <th>Restrictions</th>
+        <th>Cost</th>
+      </tr>
+    </thead>
+    <tbody *ngFor="let gadget of pagedGadgets()" >
+      <tr (click)="gadget.visible = !gadget.visible">
+        <td>{{ gadget.name }}</td>
+        <td>{{ gadget.type | capitalize }}</td>
+        <td>{{ gadget.activation | capitalize }}</td>
+        <td>{{ gadget.level }}</td>
+        <td>{{ gadget.restrictions | capitalize | commaSplit }}</td>
+        <td>{{ gadget.cost }}cr</td>
+      </tr>
+      <tr *ngIf="gadget.visible">
+        <td colspan="6">
+          <div class="col-6 offset-0 col-md-8 offset-md-2">
+            <div class="row">
+              <h3>{{ gadget.name }}</h3>
+            </div>
+            <div class="row">
+              <em>
+                {{ _.capitalize(gadget.type) + (!!gadget.subtype ? ' (' + gadget.subtype + ')' : '')}};
+              </em>
+            </div>
+            <hr/>
+            <div class="row" [innerHtml]="gadget.desc | markdown"></div>
+            <div class="row">
+              <span class="badge badge-pill badge-success">Activation: {{ gadget.activation }}</span>&nbsp;
+              <span class="badge badge-pill badge-info">Cost: {{ gadget.cost }}cr</span>&nbsp;
+              <span class="badge badge-pill badge-danger" *ngIf="!!gadget.restrictions">{{ gadget.restrictions | capitalize | commaSplit }} only</span>
+            </div>
+          </div>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+</div>
+
+<ul class="pagination justify-content-center">
+  <li class="page-item">
+    <a class="page-link" href="javascript:void(0);" (click)="page = page - 1">
+      <i class="fal fa-fw fa-chevron-left"></i>
+    </a>
+  </li>
+  <li class="page-item" *ngFor="let num of _.range(0, pages)" [class.active]="page === num">
+    <a class="page-link" href="javascript:void(0);" (click)="page = num">{{ num + 1 }}</a>
+  </li>
+  <li class="page-item">
+    <a class="page-link" href="javascript:void(0);" (click)="page = page + 1">
+      <i class="fal fa-fw fa-chevron-right"></i>
+    </a>
+  </li>
+</ul>
