--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,70 +1,85 @@
 <h1 class="title">Home</h1>
 <hr/>
-<div class="ui-grid ui-grid-responsive ui-fluid">
-  <div class="ui-grid-row">
-    <p-panel class="ui-grid-col-4 home-panel">
-      <p-header>
-        <div class="ui-helper-clearfix" style="text-align:center">
-          <a routerLink="/carousing"><button pButton type="button" label="Carousing" icon="fa-beer"></button></a>
-        </div>
-      </p-header>
-      The carousing page has a generator on it which will allow you to get random carousing results for your players.
-    </p-panel>
 
-    <p-panel class="ui-grid-col-4 home-panel">
-      <p-header>
-        <div class="ui-helper-clearfix" style="text-align:center">
-          <a routerLink="/combat"><button pButton type="button" label="Combat" icon="fa-shield"></button></a>
-        </div>
-      </p-header>
-      The combat page is an initiative tracker. It uses the data from the monster compendium page to allow you to pull in and roll HP and initiative for monsters, and it helps you keep track the state of combat all on one page.
-    </p-panel>
+<div class="container-fluid">
+  <div class="row">
+    <div class="card col-12 col-md-4">
+      <div class="card-body">
+        <h5 class="card-title">Carousing</h5>
+        <p class="card-text">The carousing page has a generator on it which will allow you to get random carousing results for your players.</p>
+        <a class="card-link" routerLink="/carousing">
+          Carousing
+          <i class="fal fa-fw fa-beer"></i>
+        </a>
+      </div>
+    </div>
 
-    <p-panel class="ui-grid-col-4 home-panel">
-      <p-header>
-        <div class="ui-helper-clearfix" style="text-align:center">
-          <a routerLink="/force"><button pButton type="button" label="Force" icon="fa-rebel"></button></a>
-        </div>
-      </p-header>
-      The force page is a compendium of the Star Wars 5e force disciplines and abilities.
-    </p-panel>
+    <div class="card col-12 col-md-4">
+      <div class="card-body">
+        <h5 class="card-title">Combat</h5>
+        <p class="card-text">The combat page is an initiative tracker. It uses the data from the monster compendium page to allow you to pull in and roll HP and initiative for monsters, and it helps you keep track the state of combat all on one page.</p>
+        <a class="card-link" routerLink="/combat">
+          Combat
+          <i class="fal fa-fw fa-shield"></i>
+        </a>
+      </div>
+    </div>
+
+    <div class="card col-12 col-md-4">
+      <div class="card-body">
+        <h5 class="card-title">Force</h5>
+        <p class="card-text">The force page is a compendium of the Star Wars 5e force disciplines and abilities.</p>
+        <a class="card-link" routerLink="/force">
+          Force
+          <i class="fal fa-fw fa-chevron-double-right"></i>
+        </a>
+      </div>
+    </div>
   </div>
-  <div class="ui-grid-row">
-    <p-panel class="ui-grid-col-4 home-panel">
-      <p-header>
-        <div class="ui-helper-clearfix" style="text-align:center">
-          <a routerLink="/gadgets"><button pButton type="button" label="Gadgets" icon="fa-cog"></button></a>
-        </div>
-      </p-header>
-      The gadgets page contains a list of all the available gadgets for the Engineer class, all the weapon modifications for the Trooper class, and all the gadgets usable by the Mercenary class.
-    </p-panel>
+  <div class="row">
+    <div class="card col-12 col-md-4">
+      <div class="card-body">
+        <h5 class="card-title">Gadgets</h5>
+        <p class="card-text">The gadgets page contains a list of all the available gadgets for the Engineer class, all the weapon modifications for the Trooper class, and all the gadgets usable by the Mercenary class.</p>
+        <a class="card-link" routerLink="/gadgets">
+          Gadgets
+          <i class="fal fa-fw fa-cog"></i>
+        </a>
+      </div>
+    </div>
 
-    <p-panel class="ui-grid-col-4 home-panel">
-      <p-header>
-        <div class="ui-helper-clearfix" style="text-align:center">
-          <a routerLink="/map"><button pButton type="button" label="Galaxy Map" icon="fa-map"></button></a>
-        </div>
-      </p-header>
-      The galaxy map page contains a force-directed graph of the Star Wars universe. On this page, you can learn things about the planets in the Star Wars universe such as the climate and inhabitants. In addition, you can use the tool presented to find the shortest path between certain planets.
-    </p-panel>
+    <div class="card col-12 col-md-4">
+      <div class="card-body">
+        <h5 class="card-title">Map</h5>
+        <p class="card-text">The galaxy map page contains a force-directed graph of the Star Wars universe. On this page, you can learn things about the planets in the Star Wars universe such as the climate and inhabitants. In addition, you can use the tool presented to find the shortest path between certain planets.</p>
+        <a class="card-link" routerLink="/map">
+          Map
+          <i class="fal fa-fw fa-map"></i>
+        </a>
+      </div>
+    </div>
 
-    <p-panel class="ui-grid-col-4 home-panel">
-      <p-header>
-        <div class="ui-helper-clearfix" style="text-align:center">
-          <a routerLink="/magical-items"><button pButton type="button" label="Magical Items" icon="fa-magic"></button></a>
-        </div>
-      </p-header>
-      The magical items page is a compendium of the magical items created for the Star Wars 5e conversion.
-    </p-panel>
+    <div class="card col-12 col-md-4">
+      <div class="card-body">
+        <h5 class="card-title">Magical Items</h5>
+        <p class="card-text">The magical items page is a compendium of the magical items created for the Star Wars 5e conversion.</p>
+        <a class="card-link" routerLink="/magical-items">
+          Magical Items
+          <i class="fal fa-fw fa-magic"></i>
+        </a>
+      </div>
+    </div>
   </div>
-  <div class="ui-grid-row">
-    <p-panel class="ui-grid-col-4 home-panel">
-      <p-header>
-        <div class="ui-helper-clearfix" style="text-align:center">
-          <a routerLink="/monster-manual"><button pButton type="button" label="Monster Manual" icon="fa-empire"></button></a>
-        </div>
-      </p-header>
-      The monster manual page is a compendium of all of the Star Wars 5e monsters created for this conversion.
-    </p-panel>
+  <div class="row">
+    <div class="card col-12 col-md-4">
+      <div class="card-body">
+        <h5 class="card-title">Monster Manual</h5>
+        <p class="card-text">The monster manual page is a compendium of all of the Star Wars 5e monsters created for this conversion.</p>
+        <a class="card-link" routerLink="/monster-manual">
+          Monster Manual
+          <i class="fal fa-fw fa-child"></i>
+        </a>
+      </div>
+    </div>
   </div>
 </div>
