--- a/src/app/carousing/carousing.component.html
+++ b/src/app/carousing/carousing.component.html
@@ -17,7 +17,7 @@
           Go Carousing
           <i class="fal fa-fw fa-beer"></i>
         </button>
-        <button type="button" class="btn btn-primary" (click)="res = []">
+        <button type="button" class="btn btn-danger" (click)="res = []">
           Clear
           <i class="fal fa-fw fa-times"></i>
         </button>
