--- a/src/app/force/force.component.html
+++ b/src/app/force/force.component.html
@@ -70,6 +70,22 @@
       </tbody>
     </table>
   </div>
+
+  <ul class="pagination justify-content-center">
+    <li class="page-item">
+      <a class="page-link" href="javascript:void(0);" (click)="page = page - 1">
+        <i class="fal fa-fw fa-chevron-left"></i>
+      </a>
+    </li>
+    <li class="page-item" *ngFor="let num of _.range(0, pages)" [class.active]="page === num">
+      <a class="page-link" href="javascript:void(0);" (click)="page = num">{{ num + 1 }}</a>
+    </li>
+    <li class="page-item">
+      <a class="page-link" href="javascript:void(0);" (click)="page = page + 1">
+        <i class="fal fa-fw fa-chevron-right"></i>
+      </a>
+    </li>
+  </ul>
 </div>
 
 <div *ngIf="view === 'disciplines'" style="padding: 5px 5px 5px 5px;">
